--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="http://localhost:5001/style.css"></link>
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Yanone+Kaffeesatz" rel="stylesheet">
     <title>Browse Restaurants</title>
-    <style type="text/css">
-      html, body {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: 'Yanone Kaffeesatz', sans-serif;
-      }
-
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        background-color: #f3f3de;
-        color: #2b2318;
-        display: flex;
-        flex-direction: column;
-      }
-
-      main {
-        flex: 1;
-      }
-    </style>
   </head>
   <body>
     <noscript>
