--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="http://localhost:5001/style.css"></link>
+    <link rel="stylesheet" href="http://localhost:5000/style.css"></link>
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Yanone+Kaffeesatz" rel="stylesheet">
     <title>Browse Restaurants</title>
   </head>
@@ -16,8 +16,8 @@
     <main id="container"></main>
     <script type="text/javascript">
       function tryRender() {
-        if (window.renderBrowseMicrofrontend) {
-          window.renderBrowseMicrofrontend('container');
+        if (window.renderBrowse) {
+          window.renderBrowse('container');
         } else {
           setTimeout(tryRender, 100);
         }
